Suggested name change

--- a/src/main/resources/assets/slimecrasher/lang/en_US.lang
+++ b/src/main/resources/assets/slimecrasher/lang/en_US.lang
@@ -1,4 +1,4 @@
-item.slimecrasher_slimeCrasher.name=Slime Crasher
+item.slimecrasher_slimeCrasher.name=Slime Crusher
 item.slimecrasher_compressedSlimeball.name=Compressed Slimeball
-itemGroup.slimecrasher=Slime Crasher
+itemGroup.slimecrasher=Slime Crusher
 tile.slimecrasher_loadingStation.name=Loading Station
